--- a/Le21-WPF/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/Le21-WPF/WpfApp1/WpfApp1/MainWindow.xaml
@@ -6,9 +6,14 @@
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Grid Margin="0,0,3.333,-0.333">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="274*"/>
+            <RowDefinition Height="147*"/>
+        </Grid.RowDefinitions>
         <Button Content="Button" HorizontalAlignment="Left" Margin="236,253,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="376,253,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="425,198,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+        <Label Content="文字&#xD;&#xA;" HorizontalAlignment="Left" Margin="376,195,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
